...
    <string name="ed_remove_event">Remove this event?</string>
    <string name="ed_close_event_details">Close event details</string>
    <string name="ed_edit">Edit</string>
    <string name="ed_edit_event">Edit event</string>
    <string name="ed_more_event_actions">More event actions</string>
    <string name="ed_new_task">New task</string>
    <string name="ed_cancel_task_editing">Cancel task editing</string>
    <string name="ed_delete_task">Delete task</string>
    <string name="ed_save_task">Save task</string>
    <string name="ed_mark_open">Mark as open</string>
    <string name="ed_mark_done">Mark as done</string>
    <string name="ed_mark_task_open">Mark task as open</string>
    <string name="ed_mark_task_done">Mark task as done</string>
...
